--- a/src/editors/xrECore/xrECore.vcxproj.filters
+++ b/src/editors/xrECore/xrECore.vcxproj.filters
@@ -4,74 +4,80 @@
     <Filter Include="Core">
       <UniqueIdentifier>{5ef41f0f-a8ef-4194-ae46-068b92e5bbd3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Props &amp; Windows">
+    <Filter Include="Windows &amp; Controls">
       <UniqueIdentifier>{d033d54c-f62f-4d60-bf0e-e8158fb1c7d5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Props &amp; Windows\WindowView">
-      <UniqueIdentifier>{2ff23dd0-a4e5-409f-8ece-366eda459d2f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\SelectItem">
-      <UniqueIdentifier>{1ad2122a-1bb6-4d35-ac47-50cd5cadb647}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\ShaderFunction">
-      <UniqueIdentifier>{56d7edeb-5e87-435e-b603-082c4d95413f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\WindowSplash">
-      <UniqueIdentifier>{4fa3af5d-dd57-4613-a525-040526ee8ca3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\TextEdit">
-      <UniqueIdentifier>{d6664b68-d033-492a-9771-83f3129cd1af}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\PropertiesList">
-      <UniqueIdentifier>{8e7aaac2-2ec7-45eb-81af-f73fad7a009e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\FolderLib">
+    <Filter Include="Windows &amp; Controls\FolderLib">
       <UniqueIdentifier>{6ad9d22d-603b-4687-a95e-216adf62c562}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Props &amp; Windows\GameType">
-      <UniqueIdentifier>{6990b14a-937f-44c1-9ca3-1f83ab512b84}</UniqueIdentifier>
+    <Filter Include="Windows &amp; Controls\Windows">
+      <UniqueIdentifier>{b54ab867-e505-4e62-86ce-3a254b7b971d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Props &amp; Windows\ItemList">
-      <UniqueIdentifier>{df5445f5-5310-41bc-abd3-0ff4dc5f4d8f}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\WindowLog">
+    <Filter Include="Windows &amp; Controls\Windows\WindowLog">
       <UniqueIdentifier>{ec01fc91-102b-42d1-bf07-9ac5f3e20a55}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Props &amp; Windows\NumericVector">
-      <UniqueIdentifier>{91092487-7732-4643-9283-8ce048d56247}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Props &amp; Windows\WindowIDE">
+    <Filter Include="Windows &amp; Controls\Windows\WindowIDE">
       <UniqueIdentifier>{417ebcd4-5c96-4d26-b3aa-f634ec4eb59d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Props &amp; Windows\DockPanelSerializer">
+    <Filter Include="Windows &amp; Controls\Windows\WindowView">
+      <UniqueIdentifier>{2ff23dd0-a4e5-409f-8ece-366eda459d2f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Windows\WindowSplash">
+      <UniqueIdentifier>{4fa3af5d-dd57-4613-a525-040526ee8ca3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls">
+      <UniqueIdentifier>{a4fddb91-9f41-4e62-87bb-9db209ba97a6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\GameType">
+      <UniqueIdentifier>{6990b14a-937f-44c1-9ca3-1f83ab512b84}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\ItemList">
+      <UniqueIdentifier>{df5445f5-5310-41bc-abd3-0ff4dc5f4d8f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\NumericVector">
+      <UniqueIdentifier>{91092487-7732-4643-9283-8ce048d56247}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\PropertiesList">
+      <UniqueIdentifier>{8e7aaac2-2ec7-45eb-81af-f73fad7a009e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\SelectItem">
+      <UniqueIdentifier>{1ad2122a-1bb6-4d35-ac47-50cd5cadb647}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\ShaderFunction">
+      <UniqueIdentifier>{56d7edeb-5e87-435e-b603-082c4d95413f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\TextEdit">
+      <UniqueIdentifier>{d6664b68-d033-492a-9771-83f3129cd1af}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Windows &amp; Controls\Controls\DockPanelSerializer">
       <UniqueIdentifier>{7f8665bb-1582-4101-a123-3e0a52973049}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Props\NumericVector.cpp">
-      <Filter>Props &amp; Windows\NumericVector</Filter>
+    <ClCompile Include="Controls\NumericVector.cpp">
+      <Filter>Windows &amp; Controls\Controls\NumericVector</Filter>
     </ClCompile>
     <ClCompile Include="xrEProps.cpp">
-      <Filter>Props &amp; Windows</Filter>
+      <Filter>Windows &amp; Controls</Filter>
     </ClCompile>
-    <ClCompile Include="Props\ShaderFunction.cpp">
-      <Filter>Props &amp; Windows\ShaderFunction</Filter>
+    <ClCompile Include="Controls\ShaderFunction.cpp">
+      <Filter>Windows &amp; Controls\Controls\ShaderFunction</Filter>
     </ClCompile>
-    <ClCompile Include="Props\GameType.cpp">
-      <Filter>Props &amp; Windows\GameType</Filter>
+    <ClCompile Include="Controls\GameType.cpp">
+      <Filter>Windows &amp; Controls\Controls\GameType</Filter>
     </ClCompile>
-    <ClCompile Include="Props\TextEdit.cpp">
-      <Filter>Props &amp; Windows\TextEdit</Filter>
+    <ClCompile Include="Controls\TextEdit.cpp">
+      <Filter>Windows &amp; Controls\Controls\TextEdit</Filter>
     </ClCompile>
-    <ClCompile Include="Props\PropertiesList.cpp">
-      <Filter>Props &amp; Windows\PropertiesList</Filter>
+    <ClCompile Include="Controls\PropertiesList.cpp">
+      <Filter>Windows &amp; Controls\Controls\PropertiesList</Filter>
     </ClCompile>
-    <ClCompile Include="Props\ItemList.cpp">
-      <Filter>Props &amp; Windows\ItemList</Filter>
+    <ClCompile Include="Controls\ItemList.cpp">
+      <Filter>Windows &amp; Controls\Controls\ItemList</Filter>
     </ClCompile>
-    <ClCompile Include="Props\SelectItem.cpp">
-      <Filter>Props &amp; Windows\SelectItem</Filter>
+    <ClCompile Include="Controls\SelectItem.cpp">
+      <Filter>Windows &amp; Controls\Controls\SelectItem</Filter>
     </ClCompile>
     <ClCompile Include="Core\UI_MainCommand.cpp">
       <Filter>Core</Filter>
@@ -79,50 +85,50 @@
     <ClCompile Include="Core\ELog.cpp">
       <Filter>Core</Filter>
     </ClCompile>
-    <ClCompile Include="Props\FolderLib.cpp">
-      <Filter>Props &amp; Windows\FolderLib</Filter>
+    <ClCompile Include="Controls\FolderLib.cpp">
+      <Filter>Windows &amp; Controls\FolderLib</Filter>
     </ClCompile>
-    <ClCompile Include="Props\WindowView.cpp">
-      <Filter>Props &amp; Windows\WindowView</Filter>
+    <ClCompile Include="Windows\WindowView.cpp">
+      <Filter>Windows &amp; Controls\Windows\WindowView</Filter>
     </ClCompile>
-    <ClCompile Include="Props\WindowSplash.cpp">
-      <Filter>Props &amp; Windows\WindowSplash</Filter>
+    <ClCompile Include="Windows\WindowSplash.cpp">
+      <Filter>Windows &amp; Controls\Windows\WindowSplash</Filter>
     </ClCompile>
-    <ClCompile Include="Props\WindowIDE.cpp">
-      <Filter>Props &amp; Windows\WindowIDE</Filter>
+    <ClCompile Include="Windows\WindowIDE.cpp">
+      <Filter>Windows &amp; Controls\Windows\WindowIDE</Filter>
     </ClCompile>
-    <ClCompile Include="Props\WindowLog.cpp">
-      <Filter>Props &amp; Windows\WindowLog</Filter>
+    <ClCompile Include="Windows\WindowLog.cpp">
+      <Filter>Windows &amp; Controls\Windows\WindowLog</Filter>
     </ClCompile>
-    <ClCompile Include="Props\DockPanelSerializer.cpp">
-      <Filter>Props &amp; Windows\DockPanelSerializer</Filter>
+    <ClCompile Include="Controls\DockPanelSerializer.cpp">
+      <Filter>Windows &amp; Controls\Controls\DockPanelSerializer</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.hpp" />
-    <ClInclude Include="Props\NumericVector.h">
-      <Filter>Props &amp; Windows\NumericVector</Filter>
+    <ClInclude Include="Controls\NumericVector.h">
+      <Filter>Windows &amp; Controls\Controls\NumericVector</Filter>
     </ClInclude>
     <ClInclude Include="xrEProps.h">
-      <Filter>Props &amp; Windows</Filter>
+      <Filter>Windows &amp; Controls</Filter>
     </ClInclude>
-    <ClInclude Include="Props\ShaderFunction.h">
-      <Filter>Props &amp; Windows\ShaderFunction</Filter>
+    <ClInclude Include="Controls\ShaderFunction.h">
+      <Filter>Windows &amp; Controls\Controls\ShaderFunction</Filter>
     </ClInclude>
-    <ClInclude Include="Props\GameType.h">
-      <Filter>Props &amp; Windows\GameType</Filter>
+    <ClInclude Include="Controls\GameType.h">
+      <Filter>Windows &amp; Controls\Controls\GameType</Filter>
     </ClInclude>
-    <ClInclude Include="Props\TextEdit.h">
-      <Filter>Props &amp; Windows\TextEdit</Filter>
+    <ClInclude Include="Controls\TextEdit.h">
+      <Filter>Windows &amp; Controls\Controls\TextEdit</Filter>
     </ClInclude>
-    <ClInclude Include="Props\PropertiesList.h">
-      <Filter>Props &amp; Windows\PropertiesList</Filter>
+    <ClInclude Include="Controls\PropertiesList.h">
+      <Filter>Windows &amp; Controls\Controls\PropertiesList</Filter>
     </ClInclude>
-    <ClInclude Include="Props\ItemList.h">
-      <Filter>Props &amp; Windows\ItemList</Filter>
+    <ClInclude Include="Controls\ItemList.h">
+      <Filter>Windows &amp; Controls\Controls\ItemList</Filter>
     </ClInclude>
-    <ClInclude Include="Props\SelectItem.h">
-      <Filter>Props &amp; Windows\SelectItem</Filter>
+    <ClInclude Include="Controls\SelectItem.h">
+      <Filter>Windows &amp; Controls\Controls\SelectItem</Filter>
     </ClInclude>
     <ClInclude Include="Core\UI_MainCommand.h">
       <Filter>Core</Filter>
@@ -133,58 +139,58 @@
     <ClInclude Include="Core\Token.h">
       <Filter>Core</Filter>
     </ClInclude>
-    <ClInclude Include="Props\FolderLib.h">
-      <Filter>Props &amp; Windows\FolderLib</Filter>
+    <ClInclude Include="Controls\FolderLib.h">
+      <Filter>Windows &amp; Controls\FolderLib</Filter>
     </ClInclude>
-    <ClInclude Include="Props\WindowView.h">
-      <Filter>Props &amp; Windows\WindowView</Filter>
+    <ClInclude Include="Windows\WindowView.h">
+      <Filter>Windows &amp; Controls\Windows\WindowView</Filter>
     </ClInclude>
-    <ClInclude Include="Props\WindowSplash.h">
-      <Filter>Props &amp; Windows\WindowSplash</Filter>
+    <ClInclude Include="Windows\WindowSplash.h">
+      <Filter>Windows &amp; Controls\Windows\WindowSplash</Filter>
     </ClInclude>
-    <ClInclude Include="Props\WindowIDE.h">
-      <Filter>Props &amp; Windows\WindowIDE</Filter>
+    <ClInclude Include="Windows\WindowIDE.h">
+      <Filter>Windows &amp; Controls\Windows\WindowIDE</Filter>
     </ClInclude>
-    <ClInclude Include="Props\WindowLog.h">
-      <Filter>Props &amp; Windows\WindowLog</Filter>
+    <ClInclude Include="Windows\WindowLog.h">
+      <Filter>Windows &amp; Controls\Windows\WindowLog</Filter>
     </ClInclude>
-    <ClInclude Include="Props\DockPanelSerializer.h">
-      <Filter>Props &amp; Windows\DockPanelSerializer</Filter>
+    <ClInclude Include="Controls\DockPanelSerializer.h">
+      <Filter>Windows &amp; Controls\Controls\DockPanelSerializer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Props\ItemList.resx">
-      <Filter>Props &amp; Windows\ItemList</Filter>
+    <EmbeddedResource Include="Controls\ItemList.resx">
+      <Filter>Windows &amp; Controls\Controls\ItemList</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\PropertiesList.resx">
-      <Filter>Props &amp; Windows\PropertiesList</Filter>
+    <EmbeddedResource Include="Controls\PropertiesList.resx">
+      <Filter>Windows &amp; Controls\Controls\PropertiesList</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\NumericVector.resx">
-      <Filter>Props &amp; Windows\NumericVector</Filter>
+    <EmbeddedResource Include="Controls\NumericVector.resx">
+      <Filter>Windows &amp; Controls\Controls\NumericVector</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\ShaderFunction.resx">
-      <Filter>Props &amp; Windows\ShaderFunction</Filter>
+    <EmbeddedResource Include="Controls\ShaderFunction.resx">
+      <Filter>Windows &amp; Controls\Controls\ShaderFunction</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\GameType.resx">
-      <Filter>Props &amp; Windows\GameType</Filter>
+    <EmbeddedResource Include="Controls\GameType.resx">
+      <Filter>Windows &amp; Controls\Controls\GameType</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\TextEdit.resx">
-      <Filter>Props &amp; Windows\TextEdit</Filter>
+    <EmbeddedResource Include="Controls\TextEdit.resx">
+      <Filter>Windows &amp; Controls\Controls\TextEdit</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\SelectItem.resx">
-      <Filter>Props &amp; Windows\SelectItem</Filter>
+    <EmbeddedResource Include="Controls\SelectItem.resx">
+      <Filter>Windows &amp; Controls\Controls\SelectItem</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\WindowView.resx">
-      <Filter>Props &amp; Windows\WindowView</Filter>
+    <EmbeddedResource Include="Windows\WindowView.resx">
+      <Filter>Windows &amp; Controls\Windows\WindowView</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\WindowSplash.resx">
-      <Filter>Props &amp; Windows\WindowSplash</Filter>
+    <EmbeddedResource Include="Windows\WindowSplash.resx">
+      <Filter>Windows &amp; Controls\Windows\WindowSplash</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\WindowIDE.resx">
-      <Filter>Props &amp; Windows\WindowIDE</Filter>
+    <EmbeddedResource Include="Windows\WindowIDE.resx">
+      <Filter>Windows &amp; Controls\Windows\WindowIDE</Filter>
     </EmbeddedResource>
-    <EmbeddedResource Include="Props\WindowLog.resx">
-      <Filter>Props &amp; Windows\WindowLog</Filter>
+    <EmbeddedResource Include="Windows\WindowLog.resx">
+      <Filter>Windows &amp; Controls\Windows\WindowLog</Filter>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
